# CrossLingual-TTS-Lab

./: .gitignore  LICENSE  README.md  compute_stats.py  generated_tables.md  install_dependencies.sh  parse_reports.py  pyproject.toml  run_calibration.sh  run_common_voice_calibration.sh  run_fleurs_experiment_example.sh  test_leakage.py  xttslab.py
configs/: mini.toml  models_real.template.toml
paper/: main.tex  references.bib
src/crosslingual_tts_lab/: __init__.py  audio.py  calibration.py  cli.py  common_voice_mdc.py  config.py  cuda_libs.py  device.py  open_datasets.py  planner.py  report.py  runner.py  runner_types.py  text_metrics.py
src/crosslingual_tts_lab/backends/: __init__.py  base.py  coqui_xtts.py  cosyvoice.py  dummy.py  external.py  f5_tts.py  qwen_tts.py  registry.py  spark_tts.py
src/crosslingual_tts_lab/metrics/: __init__.py  asr.py  base.py  baseline.py  fleurs_centroids.json  leakage.py  registry.py  speaker.py
tests/: test_config_and_runner.py
